# Oracle-Digital

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
apps/grade/: admin.py  apps.py  models.py
apps/grade/migrations/: 0001_initial.py
apps/school/: admin.py  apps.py  models.py
apps/school/migrations/: 0001_initial.py  0002_remove_school_grade_school_grades.py
apps/student/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/student/migrations/: 0001_initial.py  0002_student_photo_alter_student_floor.py  0003_alter_student_photo.py  0004_alter_student_photo.py
apps/teacher/: admin.py  apps.py  manager.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/teacher/migrations/: 0001_initial.py  0002_teacher_grade.py  0003_alter_teacher_phone_number.py  0004_alter_teacher_grade.py  0005_alter_teacher_phone_number.py  0006_alter_teacher_grade_alter_teacher_phone_number.py  0007_alter_teacher_managers.py  0008_alter_teacher_email_alter_teacher_first_name_and_more.py  0009_alter_teacher_email.py
core/: settings.py  settings_test.py  urls.py
templates/: index.html
